--- a/AzureWebsite.Nodejs/source/pug/pages/index.pug
+++ b/AzureWebsite.Nodejs/source/pug/pages/index.pug
@@ -1,7 +1,11 @@
 ﻿extends ../templates/startpage.pug
 block content
-    h2.cover-heading Hämtar menyträd med Azure Functions.
-    ul#mainMenu
+    h2.cover-heading Various Azure related experiments
+    ul
+        li Fetch images with javascript from Azure Storage
+        li Fetch images with javascript from an Azure Function that retrieves them from storage
+        li Upload image to Azure Storage using Azure Functions
+        li Featch a menu from an Azure Function
+        li javascript for a menu tree
+        li minimal styling using bootstrap 
 block scripts 
-  script(src="/scripts/configuration.js")
-  script(src="/scripts/azurefunctions.js")
