--- a/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
+++ b/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
@@ -24,5 +24,8 @@ body
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js' crossorigin='anonymous')
     script(type='text/javascript' src='http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js')
+    script(src="/scripts/configuration.js")
+    script(src="/scripts/azuremenu.js")
     block scripts
+    
     
