Enabled Cosmos DB

--- a/AzureWebsite.Nodejs/source/pug/blocks/sidebar.pug
+++ b/AzureWebsite.Nodejs/source/pug/blocks/sidebar.pug
@@ -21,9 +21,9 @@ nav.col-md-2.d-none.d-md-block.bg-light.sidebar
                   span(data-feather='shopping-cart')
                   |                   Azure Storage Images
               li.nav-item
-                a.nav-link(href='#')
+                a.nav-link(href='menu.html')
                   span(data-feather='users')
-                  |                   Customers
+                  |                   Menu
               li.nav-item
                 a.nav-link(href='#')
                   span(data-feather='bar-chart-2')
