completed the nodejs

--- a/AzureWebsite.Nodejs/source/pug/blocks/sidebar.pug
+++ b/AzureWebsite.Nodejs/source/pug/blocks/sidebar.pug
@@ -25,9 +25,9 @@ nav.col-md-2.d-none.d-md-block.bg-light.sidebar
                   span(data-feather='users')
                   |                   Menu
               li.nav-item
-                a.nav-link(href='#')
+                a.nav-link(href='serviceworker.html')
                   span(data-feather='bar-chart-2')
-                  |                   Reports
+                  |                   Service Worker
               li.nav-item
                 a.nav-link(href='#')
                   span(data-feather='layers')
