--- a/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
+++ b/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
@@ -25,6 +25,7 @@ body
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js' crossorigin='anonymous')
     script(type='text/javascript' src='http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js')
     script(src="/scripts/configuration.js")
+    script(src="/scripts/startup.js")
     script(src="/scripts/azuremenu.js")
     block scripts
     
