Added inkasso system

--- a/AzureWebsite.Nodejs/source/pug/blocks/sidebar.pug
+++ b/AzureWebsite.Nodejs/source/pug/blocks/sidebar.pug
@@ -13,19 +13,23 @@ nav.col-md-2.d-none.d-md-block.bg-light.sidebar
                   |                   Start 
                   span.sr-only (current)
               li.nav-item
-                a.nav-link(href='images.html')
+                a.nav-link(href='/inkasso/persons.html')
+                  span(data-feather='file')
+                  | Inkasso
+              li.nav-item
+                a.nav-link(href='/images.html')
                   span(data-feather='file')
                   |                   Azure Function Images
               li.nav-item
-                a.nav-link(href='from_storage.html')
+                a.nav-link(href='/from_storage.html')
                   span(data-feather='shopping-cart')
                   |                   Azure Storage Images
               li.nav-item
-                a.nav-link(href='menu.html')
+                a.nav-link(href='/menu.html')
                   span(data-feather='users')
                   |                   Menu
               li.nav-item
-                a.nav-link(href='serviceworker.html')
+                a.nav-link(href='/serviceworker.html')
                   span(data-feather='bar-chart-2')
                   |                   Service Worker
               li.nav-item
