--- a/AzureWebsite.Nodejs/source/pug/pages/menu.pug
+++ b/AzureWebsite.Nodejs/source/pug/pages/menu.pug
@@ -7,4 +7,5 @@ block content
     
     
 block scripts 
+    script(src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js")
     script(src="/scripts/cosmosfunctions.js")
