--- a/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
+++ b/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
@@ -10,6 +10,8 @@ head
     link(rel='stylesheet' type='text/css' href='http://www.shieldui.com/shared/components/latest/css/light-bootstrap/all.min.css')
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous")
+    link(rel='stylesheet' href='https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css' type='text/css')
+
     link(rel='stylesheet' href='/styles/style.css' type='text/css')
 
 body
