--- a/AzureWebsite.Nodejs/source/pug/pages/inkasso/editperson.pug
+++ b/AzureWebsite.Nodejs/source/pug/pages/inkasso/editperson.pug
@@ -15,9 +15,9 @@ block content
                 th Contract
                 th 
         tbody
-
+    button#form_adddebtbutton Add Debt
    
     
 block scripts 
     script(src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js")
-    script(src="/scripts/inkasso/person.js")
+    script(src="/scripts/inkasso/editperson.js")
