--- a/AzureWebsite.Nodejs/source/pug/pages/inkasso/persons.pug
+++ b/AzureWebsite.Nodejs/source/pug/pages/inkasso/persons.pug
@@ -7,8 +7,9 @@ block content
                 th Name
                 th 
         tbody
-    a(href="/inkasso/person.html") Add
-   
+    
+    button(onclick="window.location.href='/inkasso/addperson.html';") Add Person
+    
     
 block scripts 
     script(src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js")
