--- a/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
+++ b/AzureWebsite.Nodejs/source/pug/templates/startpage.pug
@@ -25,7 +25,9 @@ body
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js' crossorigin='anonymous')
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.7.2/bluebird.min.js")
     script(type='text/javascript' src='http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js')
+    script(src="https://alcdn.msauth.net/browser/2.11.1/js/msal-browser.js")
     script(src="/scripts/configuration.js")
     script(src="/scripts/startup.js")
     script(src="/scripts/azuremenu.js")
