Enabled login/out as a modal

--- a/AzureWebsite.Nodejs/source/pug/blocks/navbar.pug
+++ b/AzureWebsite.Nodejs/source/pug/blocks/navbar.pug
@@ -2,4 +2,4 @@ nav.navbar.navbar-dark.sticky-top.bg-dark.flex-md-nowrap.p-0
     a.navbar-brand.col-sm-3.col-md-2.mr-0(href='#') Azure Web App
     ul.navbar-nav.px-3
         li.nav-item.text-nowrap
-            a.nav-link(href='login.html') Login
+            a#loginLink.nav-link(href="#"  data-toggle='modal' data-target='#loginModal') Logga in
